# cxx-cmake-template

./: .gitignore  CMakeLists.txt  README.md  configure_clang_vcpkg.sh  configure_with_vcpkg.sh
test/: test_sample.cc
toolchain/: clang-latest.cmake
